name:                hexdump
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hexdump#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hexdump
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.0
                     , mtl >= 2.2.1
  default-language:    Haskell2010

executable hexdump-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.8.0
                     , mtl >= 2.2.1                     
                     , hexdump
  default-language:    Haskell2010

test-suite hexdump-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10.8.0
                     , mtl >= 2.2.1
                     , hexdump
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hexdump
