name:                hexdump
version:             0.1.1.0
synopsis:            A hex dump tool similar to `hexdump -C`
description:         Please see README.md
homepage:            https://github.com/wangbj/hexdump#readme
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2016 Baojun Wang
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hexdump
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
  default-language:    Haskell2010

executable hexdump-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -with-rtsopts=-H16m
  build-depends:       base >= 4 && < 5
                     , QuickCheck >= 2.8 && < 3
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , hexdump
  default-language:    Haskell2010

test-suite hexdump-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4 && < 5
                     , QuickCheck >= 2.8 && < 3
                     , bytestring >= 0.10 && < 1
                     , criterion >= 1.1 && < 2
                     , mtl >= 2.2 && < 3
                     , hexdump
  ghc-options:         -rtsopts -with-rtsopts=-H16m
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/hexdump
